<resources>
    <string name="tag_hint">Tag为大小写字母，数字，下划线,中文， 多个用以逗号分隔</string>
    <string name="alias_hint">Alias为大小写字母，数字，下划线</string>
    <string name="style_hint">style为数字</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="com_sina_weibo_sdk_login">登录</string>
    <string name="com_sina_weibo_sdk_login_with_weibo_account">用微博登录</string>
    <string name="com_sina_weibo_sdk_logout">注销</string>
    <string name="action_done">完成</string>
    <string name="app_name">次元仓</string>
    <string name="folder_all">所有照片</string>
    <string name="msg_amount_limit">已经达到最高选择数量</string>
    <string name="msg_no_camera">没有系统相机</string>
    <string name="photo_unit">张</string>
    <string name="preview">预览</string>
    <string name="tip_take_photo">拍摄照片</string>
    <string name="acount_coupon">优惠券</string>
    <string name="action_description_comment">评论</string>
    <string name="action_description_follow">关注</string>
    <string name="action_description_like">长草</string>
    <string name="action_settings">Settings</string>
    <string name="add_address">所在地址：</string>
    <string name="add_address_btn">添加地址</string>
    <string name="add_consignee">收货人：</string>
    <string name="add_contact_way">联系方式：</string>
    <string name="add_default_address">默认地址：</string>
    <string name="add_detail_address">详细地址：</string>
    <string name="add_to_cart">加入购物车</string>
    <string name="address_city">城市：</string>
    <string name="address_default">默认地址</string>
    <string name="address_district">县/区：</string>
    <string name="address_edit">编辑</string>
    <string name="address_province">省份：</string>
    <string name="address_street">街道/镇：</string>
    <string name="address_title">所在地区</string>
    <string name="alipay">支付宝</string>
    <string name="app_tip">提示</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="application_number">申请数量</string>
    <string name="application_server">申请服务</string>
    <string name="application_time">申请时间：</string>
    <string name="auth_code">验证码：</string>
    <string name="back_main_page">返回首页</string>
    <string name="cancel">取消</string>
    <string name="cart_edit">编辑</string>
    <string name="check_all_orders">查看全部订单</string>
    <string name="check_order">查看订单</string>
    <string name="circum">周边推荐</string>
    <string name="clear_log">清除记录</string>
    <string name="collect">收藏</string>
    <string name="comm_comment">评论</string>
    <string name="comm_follow">关注  Ta</string>
    <string name="comm_followed">已关注</string>
    <string name="comm_grass">种草</string>
    <string name="comm_like">关注</string>
    <string name="comm_see_home_page">查看主页</string>
    <string name="comm_upload_choice">挑选要晒的商品</string>
    <string name="comm_upload_edit">写下你的购买新的,给小伙伴安利一点有意思的东西吧！</string>
    <string name="comm_upload_goods">挑选要晒的商品</string>
    <string name="comm_upload_pic">最多只能添加三张相片，请民那桑好好挑选哟~~</string>
    <string name="commit_text">提交</string>
    <string name="coupon">优惠券</string>
    <string name="delete">删除</string>
    <string name="delivery_way">配送方式</string>
    <string name="detail_call">联系客服</string>
    <string name="detail_cancel_coupon">取消使用</string>
    <string name="detail_cancel_order">删除订单</string>
    <string name="detail_coupon">优惠券</string>
    <string name="detail_freight">运费</string>
    <string name="detail_full_free">满减金额</string>
    <string name="detail_go_pay">去支付</string>
    <string name="detail_goodnum">数量：</string>
    <string name="detail_pay">实付款：</string>
    <string name="detail_total">商品总额</string>
    <string name="error_login_exp">登录信息已过期，请重新登录！</string>
    <string name="error_network_no_connection">请求失败，请检查网络！</string>
    <string name="error_network_no_server">请求失败，请稍后重试！</string>
    <string name="error_parse">请求失败，解析数据出错！</string>
    <string name="error_reLogin">小仓强烈建议您重新登录！</string>
    <string name="error_server">请求失败，服务响应异常！</string>
    <string name="error_time_out">请求超时，请稍后重试！</string>
    <string name="error_unknown">发生了未知错误，重新试试看 ⊙﹏⊙</string>
    <string name="eventid_add_address">添加收货地址</string>
    <string name="eventid_add_cart">加入购物车</string>
    <string name="eventid_address_update">订单地址修改</string>
    <string name="eventid_band_phone">绑定手机</string>
    <string name="eventid_banner">banner</string>
    <string name="eventid_cancel_collect">取消收藏</string>
    <string name="eventid_cart_check_good">购物车查看商品详情</string>
    <string name="eventid_cart_collect">购物车收藏</string>
    <string name="eventid_channel">频道类别</string>
    <string name="eventid_check_address_list">查看地址列表</string>
    <string name="eventid_check_collect_list">查看收藏列表</string>
    <string name="eventid_check_complain_list">查看服务反馈</string>
    <string name="eventid_check_coupon_list">查看优惠券列表</string>
    <string name="eventid_check_good_detail">查看商品详情</string>
    <string name="eventid_check_good_list">查看商品清单</string>
    <string name="eventid_check_invite_friend">查看邀请好友</string>
    <string name="eventid_check_logistics">查看物流</string>
    <string name="eventid_check_order_detail">查看订单详情</string>
    <string name="eventid_check_order_list">查看订单列表</string>
    <string name="eventid_check_prize_list">查看奖品列表</string>
    <string name="eventid_check_score_list">查看瓜子列表</string>
    <string name="eventid_check_scree">查看筛选</string>
    <string name="eventid_check_ticket_detail">查看电子券详情</string>
    <string name="eventid_check_ticket_list">查看电子券列表</string>
    <string name="eventid_check_user_info">查看用户资料</string>
    <string name="eventid_clear_cache">清除本地缓存</string>
    <string name="eventid_collect">详情收藏</string>
    <string name="eventid_collect_check_good_detail">收藏查看商品详情</string>
    <string name="eventid_commit_order">提交订单</string>
    <string name="eventid_contact_service">联系客服</string>
    <string name="eventid_coupon">优惠券</string>
    <string name="eventid_delete_address">删除收货地址</string>
    <string name="eventid_delete_good">删除商品</string>
    <string name="eventid_delete_order">删除订单</string>
    <string name="eventid_detail_menu">详情菜单</string>
    <string name="eventid_detail_more">详情更多菜单</string>
    <string name="eventid_edit_address">编辑收货地址</string>
    <string name="eventid_edit_good">编辑商品</string>
    <string name="eventid_edit_user_info">编辑个人信息</string>
    <string name="eventid_exit">退出登陆</string>
    <string name="eventid_forger_password">忘记密码</string>
    <string name="eventid_free_franking_gether">免邮凑单</string>
    <string name="eventid_full_gether">满减凑单</string>
    <string name="eventid_go_cart">去购物车</string>
    <string name="eventid_go_checkout">去结算</string>
    <string name="eventid_goago">去逛一逛</string>
    <string name="eventid_good_detail">商品详情</string>
    <string name="eventid_grade">给小仓评分</string>
    <string name="eventid_guess_like">猜你喜欢</string>
    <string name="eventid_hot_more">热卖更多</string>
    <string name="eventid_invite_friend">邀请好友注册</string>
    <string name="eventid_leave_word">留言</string>
    <string name="eventid_list_scree_request">列表筛选请求</string>
    <string name="eventid_list_sort">列表排序</string>
    <string name="eventid_login">本站登录</string>
    <string name="eventid_login_origin">登录页来源</string>
    <string name="eventid_main_hot">主页热卖</string>
    <string name="eventid_main_load_more">主页加载更多</string>
    <string name="eventid_main_more_good">更多首页商品</string>
    <string name="eventid_main_page">主题仓</string>
    <string name="eventid_message_btn">消息按钮</string>
    <string name="eventid_message_list">消息列表</string>
    <string name="eventid_navbar">底部导航</string>
    <string name="eventid_new_more">新品更多</string>
    <string name="eventid_new_recommend">新品推荐</string>
    <string name="eventid_one_level">一级类目</string>
    <string name="eventid_operation">专场</string>
    <string name="eventid_order_go_pay">去支付</string>
    <string name="eventid_password_visible">密码可见按钮</string>
    <string name="eventid_pull_up_load">查看图文详情</string>
    <string name="eventid_qq_login">QQ登录</string>
    <string name="eventid_register">注册账号</string>
    <string name="eventid_register_origin">注册来源</string>
    <string name="eventid_return_head">返回头部</string>
    <string name="eventid_scree_request">筛选参数选择</string>
    <string name="eventid_search">搜索</string>
    <string name="eventid_search_page">搜索页</string>
    <string name="eventid_seckilling">闪购</string>
    <string name="eventid_seckilling_more">闪购更多</string>
    <string name="eventid_select_distribution_type">选择配送方式</string>
    <string name="eventid_select_list_good">选择列表商品</string>
    <string name="eventid_select_order_type">选择订单类型标签</string>
    <string name="eventid_select_pay_type">选择支付方式</string>
    <string name="eventid_select_sku">详情选择款式</string>
    <string name="eventid_set">设置</string>
    <string name="eventid_set_default_address">设为默认收货地址</string>
    <string name="eventid_share">分享</string>
    <string name="eventid_sort_hot_recommend">分类热卖推荐</string>
    <string name="eventid_sure_Receiving">确认收货</string>
    <string name="eventid_two_level">二级类目</string>
    <string name="eventid_type_select">类别选择</string>
    <string name="eventid_update_password">修改密码</string>
    <string name="eventid_weibo_login">微博登录</string>
    <string name="eventid_weixin_login">微信登录</string>
    <string name="eventid_zizi_check_detail">吱吱查看个人详情</string>
    <string name="eventid_zizi_check_good_detail">吱吱查看商品详情</string>
    <string name="eventid_zizi_check_list">吱吱查看列表</string>
    <string name="eventid_zizi_check_original">吱吱查看原图</string>
    <string name="eventid_zizi_comment">吱吱评论</string>
    <string name="eventid_zizi_concern">吱吱关注/取消关注</string>
    <string name="eventid_zizi_list">吱吱个人列表</string>
    <string name="eventid_zizi_list_publish">吱吱列表发布</string>
    <string name="eventid_zizi_post_detail">吱吱查看帖子详情</string>
    <string name="eventid_zizi_publish">吱吱发布</string>
    <string name="eventid_zizi_seeding">吱吱种草</string>
    <string name="express_distribution">快递配送</string>
    <string name="finish">完成</string>
    <string name="forget_pwd">忘记密码?</string>
    <string name="good_list_tab_composite">综合排序</string>
    <string name="good_list_tab_price_sort">价格</string>
    <string name="good_list_tab_screening">筛选</string>
    <string name="harvest_address">收货地址：</string>
    <string name="hot_search">热门搜索</string>
    <string name="hot_tile">热搜</string>
    <string name="main_cart">购物车</string>
    <string name="password">密码</string>
    <string name="register"><u>注册账号</u></string>
    <string name="user_log">历史记录</string>
    <string name="username">账号</string>
    <string name="writepassword">请输入密码</string>
    <string name="writephone">请输入手机号</string>
</resources>