<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/lay_bottom"
    android:layout_width="match_parent"
    android:layout_height="@dimen/height_common_x_l"
    android:background="@drawable/bottom_bar_bg"
    android:orientation="horizontal"
    android:weightSum="9.0">

    <LinearLayout
        android:id="@+id/ll_call_center"
        android:layout_width="0.0dip"
        android:layout_height="fill_parent"
        android:layout_weight="2.0"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/icon_size_m"
            android:layout_height="@dimen/icon_size_m"
            android:layout_gravity="center_horizontal"
            android:scaleType="fitXY"
            android:src="@drawable/icon_callserver_unpressed" />

        <TextView
            style="@style/tv_style_common"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingTop="@dimen/common_space_ms"
            android:text="@string/detail_call" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lay_btn_collect"
        android:layout_width="0.0dip"
        android:layout_height="fill_parent"
        android:layout_weight="2.0"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_btn_collect"
            android:layout_width="@dimen/icon_size_m"
            android:layout_height="@dimen/icon_size_m"
            android:scaleType="fitXY"
            android:src="@drawable/good_uncollected" />

        <TextView
            style="@style/tv_style_common"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingTop="@dimen/common_space_ms"
            android:text="@string/collect" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="0.0dip"
        android:layout_height="fill_parent"
        android:layout_weight="2.0">

        <LinearLayout
            android:id="@+id/lay_btn_goCart"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/cart_icon"
                android:layout_width="@dimen/icon_size_m"
                android:layout_height="@dimen/icon_size_m"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:scaleType="fitXY"
                android:src="@drawable/icon_good_detail_cart" />

            <TextView
                style="@style/tv_style_common"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingTop="@dimen/common_space_ms"
                android:text="@string/main_cart" />
        </LinearLayout>

        <View
            android:id="@+id/min_line_view"
            android:layout_width="4.0dip"
            android:layout_height="fill_parent"
            android:layout_centerHorizontal="true"
            android:background="@color/transparent" />

        <TextView
            android:id="@+id/tv_cart_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="2.0dip"
            android:layout_marginTop="2.0dip"
            android:layout_toRightOf="@id/min_line_view"
            android:background="@drawable/circle_red_msg_num_bg"
            android:clickable="false"
            android:gravity="center"
            android:paddingBottom="1.0dip"
            android:paddingLeft="4.0dip"
            android:paddingRight="4.0dip"
            android:paddingTop="1.0dip"
            android:singleLine="true"
            android:textColor="@color/tv_color_white"
            android:textSize="10.0dip" />
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_btn_addCart"
        android:layout_width="0.0dip"
        android:layout_height="fill_parent"
        android:layout_weight="3.0"
        android:background="@drawable/new_btn_press_color_red_and_litterred"
        android:gravity="center"
        android:text="@string/add_to_cart"
        android:textColor="@color/tv_color_white"
        android:textSize="@dimen/common_tv_size_xl" />
</LinearLayout>