<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:zhy="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/gray_shallow_light_bg"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="5.0dip"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingLeft="10.0dip"
        android:paddingRight="10.0dip">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5.0dip"
            android:paddingTop="5.0dip"
            android:text="@string/hot_search"
            android:textColor="@color/black"
            android:textSize="16.0sp" />

        <com.zhy.view.flowlayout.TagFlowLayout
            android:id="@+id/flowLayout"
            android:padding="20dp"
            zhy:max_select="-1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:visibility="visible" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/user_content"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="5.0dip"
        android:background="@color/gray_shallow_light_bg"
        android:orientation="vertical"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="48.0dip"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="10.0dip"
            android:paddingRight="10.0dip">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="5.0dip"
                android:paddingRight="10.0dip"
                android:paddingTop="5.0dip"
                android:text="@string/hot_tile"
                android:textColor="@color/black"
                android:textSize="16.0sp" />

            <HorizontalScrollView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:overScrollMode="never"
                android:scrollbars="none">

                <LinearLayout
                    android:id="@+id/hot_keys"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingLeft="5.0dip"
                    android:paddingRight="5.0dip" />
            </HorizontalScrollView>
        </LinearLayout>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10.0dip"
            android:background="@color/white"
            android:paddingBottom="5.0dip"
            android:paddingLeft="10.0dip"
            android:paddingRight="10.0dip"
            android:paddingTop="5.0dip"
            android:text="@string/user_log"
            android:textColor="@color/black"
            android:textSize="16.0sp" />

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:fadingEdge="none"
            android:paddingLeft="10.0dip"
            android:paddingRight="10.0dip"
            android:scrollbarDefaultDelayBeforeFade="1000"
            android:scrollbarFadeDuration="500"
            android:scrollbarSize="3.0dip"
            android:scrollbarStyle="insideInset"
            android:scrollbarThumbVertical="@color/line_color">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:paddingBottom="10.0dip">

                <com.atguigu.mycyc.view.MyScrollListView
                    android:id="@+id/user_keys"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:cacheColorHint="#00000000"
                    android:divider="@null"
                    android:listSelector="@color/black_half_transparent"
                    android:overScrollMode="never" />

                <Button
                    android:id="@+id/clearBtn"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40.0dip"
                    android:layout_marginRight="40.0dip"
                    android:layout_marginTop="10.0dip"
                    android:background="@drawable/clear_btn"
                    android:paddingBottom="5.0dip"
                    android:paddingTop="5.0dip"
                    android:text="@string/clear_log"
                    android:textColor="@color/tv_color_red" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</FrameLayout>