<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/new_login_background"
    android:orientation="vertical">

    <include
        layout="@layout/new_common_bar"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/new_top_bar_height" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:overScrollMode="never"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/common_padding_space"
            android:paddingRight="@dimen/common_padding_space">

            <RelativeLayout
                android:layout_width="146.0dip"
                android:layout_height="128.0dip"
                android:layout_gravity="center"
                android:layout_marginBottom="40.0dip"
                android:layout_marginTop="40.0dip"
                android:background="@drawable/new_user_login_icon" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="@dimen/common_item_height"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/common_padding_space">

                <TextView
                    android:id="@+id/tv_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="@dimen/common_space"
                    android:text="@string/username"
                    android:textColor="@color/black_dark_tv"
                    android:textSize="14.0sp" />

                <EditText
                    android:id="@+id/et_username"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:background="@null"
                    android:focusable="true"
                    android:gravity="center_vertical"
                    android:hint="@string/writephone"
                    android:inputType="number"
                    android:textColor="@color/black_dark_tv"
                    android:textColorHint="#ffdcdcdc"
                    android:textSize="14.0sp">

                    <requestFocus />
                </EditText>
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1.0dip"
                android:background="@color/black_deep_line" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="@dimen/common_item_height"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/common_padding_space">

                <TextView
                    android:id="@+id/tv_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="@dimen/common_space"
                    android:text="@string/password"
                    android:textColor="@color/black_dark_tv"
                    android:textSize="14.0sp" />

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="0.0dip"
                    android:layout_height="fill_parent"
                    android:layout_weight="1.0"
                    android:background="@null"
                    android:focusable="true"
                    android:gravity="center_vertical"
                    android:hint="@string/writepassword"
                    android:inputType="textPassword"
                    android:textColor="@color/black_dark_tv"
                    android:textColorHint="#ffdcdcdc"
                    android:textSize="14.0sp" />

                <ImageView
                    android:id="@+id/iv_password_status"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:paddingLeft="2.0dip"
                    android:paddingRight="@dimen/common_space"
                    android:scaleType="center"
                    android:src="@drawable/new_password_drawable_invisible" />
            </LinearLayout>

            <Button
                android:id="@+id/btn_login"
                android:layout_width="fill_parent"
                android:layout_height="40.0dip"
                android:layout_marginTop="24.0dip"
                android:background="@drawable/new_btn_press_color_red_and_litterred"
                android:paddingBottom="7.0dip"
                android:paddingTop="7.0dip"
                android:text="登录"
                android:textColor="@color/white"
                android:textSize="16.0sp" />

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="40.0dip"
                android:layout_marginTop="24.0dip">

                <TextView
                    android:id="@+id/btn_register"
                    android:layout_width="80.0dip"
                    android:layout_height="fill_parent"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_gravity="right"
                    android:background="@null"
                    android:drawableBottom="@color/red_theme"
                    android:gravity="center|left"
                    android:text="@string/register"
                    android:textColor="@color/red_theme"
                    android:textSize="14.0sp" />

                <Button
                    android:id="@+id/btn_forget"
                    android:layout_width="80.0dip"
                    android:layout_height="fill_parent"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_gravity="right"
                    android:background="@null"
                    android:gravity="center|right"
                    android:text="@string/forget_pwd"
                    android:textColor="@color/black_dark_tv"
                    android:textSize="14.0sp" />
            </RelativeLayout>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="40.0dip"
                android:gravity="center"
                android:text="其他登录方式"
                android:textColor="@color/gray_dark_tv"
                android:textSize="@dimen/common_tv_size_l" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="40.0dip"
                android:layout_marginBottom="10.0dip"
                android:background="@color/gray_three_login_bg"
                android:gravity="center"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="0.0dip"
                    android:layout_height="fill_parent"
                    android:layout_weight="1.0"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="40.0dip"
                        android:layout_height="40.0dip"
                        android:scaleType="center"
                        android:src="@drawable/icon_weibo" />

                    <!--<ImageView-->
                    <!--android:id="@+id/login_weibo"-->
                    <!--android:layout_width="40.0dip"-->
                    <!--android:layout_height="40.0dip"-->
                    <!--android:scaleType="center" />-->
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="0.0dip"
                    android:layout_height="fill_parent"
                    android:layout_weight="1.0"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/login_qq"
                        android:layout_width="40.0dip"
                        android:layout_height="40.0dip"
                        android:scaleType="center"
                        android:src="@drawable/icon_qq" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0.0dip"
                    android:layout_height="fill_parent"
                    android:layout_weight="1.0"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/iv_login_weixin"
                        android:layout_width="40.0dip"
                        android:layout_height="40.0dip"
                        android:scaleType="center"
                        android:src="@drawable/icon_weixin" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
